Update grading scale with A+ and integer rounding